--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+   <link rel="stylesheet" href="estilo/style.css">
     <title>Social</title>
+
 </head>
 <body>
-    <h1>Óla,Vidaa!</h1>
+   <main>
+     <section id="telefone">
+
+     </section>
+     <section id="">
+
+     </section>
+   </main>
 </body>
 </html>
